Fix width of opacity on truncated posts.

--- a/scss/partials/_expanded_post.scss
+++ b/scss/partials/_expanded_post.scss
@@ -450,7 +450,7 @@ div.expanded-post {
           &:before {
             content: "";
             display: block;
-            width: #{$board_container_width}px;
+            width: 100%;
             position: absolute;
             top: 47px;
             left: 0;
